# remote-hands

./: .gitignore  .gitmodules  canvas.cpp  canvas.h  mainwindow.h  remote-hands.pro
ESP/scetch-1/: main.cpp  quaternionFilters.cpp  quaternionFilters.h  scetch-1.ino
ESP/scetch-2/: Dual_MPU9250_dual_Ladybug.ino  MPU6050.h  MPU6050_6Axis_MotionApps20.h  MPU9150.h  scetch-2.ino
ESP/scetch-2/MPU6050/: MPU6050.h  MPU6050_6Axis_MotionApps20.h
ESP/scetch-2/MPU9150/: MPU9150.h
ESP/scetch-3/: scetch-3.ino
ESP/scetch-3/MPU9250-master/examples/Advanced_I2C/: Advanced_I2C.ino
ESP/scetch-4/: scetch-4.ino
ESP/scetch-4-test/: scetch-4-test.ino
ESP/scetch-5/: scetch-5.ino
arbotix/: README.md
arbotix/examples/example-1/: example-1.ino
arbotix/examples/example-2/: example-2.ino
arbotix/scetch-2/: scetch-2.ino
arbotix/scetch-3/: scetch-3.ino
arbotix/scetch-4/: scetch-4.ino
arbotix/scetch-5/: RemoteHand.cpp  RemoteHand.h  scetch-5.ino
arbotix/scetch-6/: scetch-6.ino
arbotix/scetch-7/: scetch-7.ino
arbotix/scetch-7-test-servos/: scetch-7-test-servos.ino
arbotix/scetch-8-rem/: scetch-8-rem.ino
arbotix/scetch-9-test-mx106r/: MX106R.cpp  MX106R.h  scetch-9-test-mx106r.ino
bracer/arduino/: arduino.ino  inv_mpu.c
bracer/arduino_quaternions/: arduino_quaternions.ino
bracer/esp8266/: esp8266.ino
bracer/quaternion_example/: quaternion_example.ino
client/: README.md  canvas.cpp  canvas.h  graphics.py  limb.cpp  limb.h  main.cpp  main.py  mainwindow.cpp  mainwindow.h  mathematics.py  networking.py  remote-hands.pro  shapes.cpp  shapes.h  utils.py
client/glut/: .gitignore  CMakeLists.txt  arms.h  complex_shape.cpp  complex_shape.h  forward_kinematics.h  hands.h  inverse_kinematics.h  kinematics.h  kinematics_animations.h  limb.h  linked_shape.cpp  linked_shape.h  main.cpp  manipulator.h  matrix.h  nested_group.cpp  nested_group.h  nested_shape.cpp  nested_shape.h  scene_object.h  shape.cpp  shape.h  shape_group.cpp  shape_group.h  tied_shape.cpp  tied_shape.h  vec.h  vertex.cpp  vertex.h
client/golang/: main.go  tcp-server.go
client/python/: README.md  client.py  graphics.py  kinematics.py  main.py  mathematics.py  requirements.txt  server.py  utils.py
client/qt/: canvas.cpp  remote-hands.pro
jupyter/: rotate_acceleration.ipynb  test_quaternions.ipynb
jupyter/.ipynb_checkpoints/: rotate_acceleration-checkpoint.ipynb  test_quaternions-checkpoint.ipynb
matlab/: bracer_3d_test.m  bracer_3d_test.m~  bracer_3d_test_no_computation.m  bracer_3d_test_no_computation.m~  kinematics_only.m  kinematics_only_1.m  kinematics_only_2.m  kinematics_only_3.m  left_right_movement.fig  manipulator.asv  manipulator.m  manipulator.m~  manipulator_for_android.m  manipulator_for_android.m~  manipulator_for_android_4_dof.m  manipulator_for_android_4_dof.m~  manipulator_for_android_6_4_dof.m  manipulator_for_android_6_4_dof.m~  manipulator_for_android_6_4_dof_spline.m  manipulator_for_android_6_dof.m  manipulator_for_android_6_dof.m~  manipulator_for_android_computation.m  manipulator_nn.asv  manipulator_nn.m  manipulator_test_serial.m  measurement_error.m  nn.m  tcp_server.m  top_bottom_movement.fig
old/arbotix/: README.md
old/arbotix/i2c_scanner/: i2c_scanner.ino
old/arbotix/scetch-1/: scetch-1.ino
old/arbotix/scetch-2/: scetch-2.ino
old/arbotix/scetch-3/: scetch-3.ino
old/arbotix/scetch-5/: RemoteHand.cpp  RemoteHand.h
old/arbotix/scetch-6/: scetch-6.ino
old/arbotix/scetch-7-test-servos/: scetch-7-test-servos.ino
old/arbotix/scetch-9-test-mx106r/: MX106R.cpp  MX106R.h  scetch-9-test-mx106r.ino
old/esp/scetch-1/: discreteFilter.cpp  discreteFilter.h
old/esp/scetch-2/: MPU6050.cpp  MPU6050_9Axis_MotionApps41.h  MPU9150_9Axis_MotionApps41.h
old/esp/scetch-4/: scetch-4.ino
old/esp/scetch-5/: scetch-5.ino
old/esp/scetch-6/: scetch-6.ino
old/esp/scetch-7/: scetch-7.ino
old/esp/scetch-8/: scetch-8.ino
old/esp/scetch-test/: scetch-4-test.ino
old/esp/test_folder/kalman_test_scetch1/: kalman_test_scetch1.ino
raspberry/: .#main.cpp  CMakeLists.txt  README.md  arms.h  forward_kinematics_animations.h  main.cpp  nested_shape.h  quaternion.cpp  quaternion.h  serial.cpp  serial.h  server.cpp  server.h  std_vector_utils.h  vector.h
raspberry/apps/: CMakeLists.txt
raspberry/apps/manipulator_simulation/: CMakeLists.txt  arms.h  inverse_kinematics.h  inverse_kinematics_animations.h  main.cpp  std_utils.h
raspberry/include/opengl_shape_groups/: nested_group.h  nested_shape.h  shape.h  shape_group.h
raspberry/old/: main.cpp
raspberry/sources/: CMakeLists.txt
raspberry/sources/opengl_shape_groups/: CMakeLists.txt  nested_group.cpp  nested_shape.cpp  shape.cpp  shape_group.cpp
raspberry/sources/shape_groups/: CMakeLists.txt
raspberry/tests/: CMakeLists.txt
simulation/glut/: CMakeLists.txt  arms_animations.h  inverse_kinematics.h  inverse_kinematics_animations.h  main.cpp  mathematics.cpp  mathematics.h  matrix.h  nested_group.cpp  nested_group.h  nested_shape.cpp  serial.cpp  serial.h  server.cpp  server.h  utils.h  vector.h
simulation/qt/: mainwindow.cpp  shapes.cpp
wolfram/: TestingRotations.wl  TransformationMatrices.wl
